# jasmin

./: dune-project
compiler/: Makefile  slot_same.jazz  test.c
compiler/safetylib/: safetyAbsExpr.ml  safetyAbsExpr.mli  safetyInterpreter.ml  safetyInterpreter.mli  safetyPreanalysis.ml  safetyPreanalysis.mli  safetyUtils.ml  safetyUtils.mli  safetyVar.ml  safetyVar.mli
compiler/safetylib/domains/: safetyBoolean.ml  safetyInterfaces.ml
compiler/src/: alias.ml  arch_full.ml  arch_full.mli  array_expand.mli  compile.mli  conv.ml  conv.mli  coreIdent.ml  coreIdent.mli  dune  evaluator.mli  glob_options.ml  insert_copy_and_fix_length.ml  insert_copy_and_fix_length.mli  lexer.mll  main_compiler.ml  parser.mly  pp_arm_m4.ml  ppasm.ml  ppasm.mli  pretyping.ml  pretyping.mli  printCommon.ml  printCommon.mli  printLinear.mli  printer.ml  printer.mli  prog.ml  prog.mli  regalloc.ml  sct_checker_forward.ml  stackAlloc.ml  stackAlloc.mli  syscall_ocaml.ml  toEC.ml  toEC.mli  typing.mli  varalloc.ml  varalloc.mli  x86_safety.mli
compiler/src/CIL/: dune
compiler/src/extraction_lib/: annot.ml  annotations.ml  coreIdent.ml  coreIdent.mli  dune  fInfo.ml
compiler/src/pre_CIL/: dune  fintype.ml  fintype.mli  seq.ml  seq.mli  stack_zero_strategy.ml  stack_zero_strategy.mli  stack_zero_strategy_defs.mli  utils0.ml  utils0.mli  wsize.ml  wsize.mli  wsize_defs.mli
compiler/tests/exec/: sem_unit.ml
compiler/tests/fail/typing/: export_call.jazz  export_reg_array_arg.jazz  non_inline_reg_array_arg.jazz  non_inline_reg_array_res.jazz
compiler/tests/success/: test_reg_ptr2.jazz
proofs/: Makefile  _CoqProject  dune
proofs/compiler/: array_expansion.v  compiler_proof.v  constant_prop_proof.v  linear_proof.v  linearization_proof.v  lowering.v  merge_varmaps_proof.v  stack_alloc.v  stack_alloc_proof.v  stack_alloc_proof_2.v  x86_decl.v  x86_sem.v  x86_variables.v
proofs/extraction/: dune  extraction.v
proofs/lang/: expr.v  expr_facts.v  fexpr_facts.v  gen_map.v  ident.v  low_memory.v  memory_example.v  memory_model.v  one_varmap.v  psem.v  psem_facts.v  sem_one_varmap_facts.v  stack_zero_strategy.v  stack_zero_strategy_defs.v  strings.v  tagged.v  type.v  var.v  varmap.v  warray_.v  word.v  wsize.v  wsize_defs.v
