(coq.theory
  (name Jasmin)
  (theories mathcomp)
  (flags -w -notation-overridden
         -w -ambiguous-paths
         -w -duplicate-clear
         -w +deprecated-hint-without-locality
         -w +deprecated-hint-rewrite-without-locality
         -w +deprecated-instance-without-locality
         -w -hiding-delimiting-key
         -w +deprecated-since-mathcomp-1.17.0))

(include_subdirs qualified)
