(include_subdirs no)

(coq.extraction
  (prelude extraction)
  (theories mathcomp Jasmin)
  (flags -w -extraction-reserved-identifier
         -w -extraction-opaque-accessed)
  (extracted_modules
    BinInt
    BinNat
    BinNums
    Datatypes
    eqtype
    Specif
    ssrfun
    var0

    oseq
    seq_extra
    xseq
    arch_decl
    arch_extra
    arch_utils
    asm_gen
    label
    sem_params_of_arch_extra
    allocation
    arch_params
    arm_decl
    arm_extra
    arm_instr_decl
    arm_lowering
    arm_params
    arm_params_common
    arm_params_core
    arm_stack_zeroization
    arm
    array_expansion
    array_copy
    array_init
    byteset
    compiler_util
    compiler
    constant_prop
    dead_calls
    dead_code
    inline
    lea
    linear_util
    linearization
    lowering
    lower_spill
    makeReferenceArguments
    merge_varmaps
    propagate_inline
    remove_globals
    slh_lowering
    stack_alloc
    stack_zeroization
    tunneling
    unionfind
    unrolling
    x86_decl
    x86_extra
    x86_instr_decl
    x86_lowering
    x86_params
    x86_stack_zeroization
    x86
    expr
    fexpr
    flag_combination
    gen_map
    global
    ident
    linear
    low_memory
    memory_example
    memory_model
    one_varmap
    psem_defs
    pseudo_operator
    sem_op_typed
    sem_params
    sem_type
    shift_kind
    sopn
    slh_ops
    stack_zero_strategy
    strings
    syscall
    syscall_sem
    tagged
    type
    values
    varmap
    waes
    warray_
    word
    wsize))
