(include_subdirs no)

(coq.extraction
  (prelude extraction)
  (theories mathcomp Jasmin)
  (flags -w -extraction-reserved-identifier
         -w -extraction-opaque-accessed)
  (extracted_modules
allocation
arch_decl
arch_extra
arch_params
arch_utils
arm_decl
arm_extra
arm_instr_decl
arm_lowering
arm
arm_params_common
arm_params_core
arm_params
arm_stack_zeroization
array_copy
array_expansion
array_init
Ascii
asm_gen
bigop
BinInt
BinNat
BinNums
BinPosDef
BinPos
Bool
byteset
choice
CMorphisms
compiler
compiler_util
constant_prop
CRelationClasses
Datatypes
dead_calls
dead_code
DecidableType
div
EqdepFacts
eqtype
Equalities
expr
fexpr
finfun
fintype
flag_combination
FMapAVL
FMapFacts
FMapList
gen_map
global
Hexadecimal
HexadecimalString
ident
Init
inline
Int
label
lea
linearization
linear
linear_util
List0
lowering
lower_spill
low_memory
makeReferenceArguments
memory_example
memory_model
merge_varmaps
MSetDecide
MSetEqProperties
MSetFacts
MSetInterface
MSetProperties
Nat0
one_varmap
OrderedType
order
Orders
OrdersTac
oseq
PeanoNat
PrimInt63
propagate_inline
psem_defs
pseudo_operator
remove_globals
sem_op_typed
sem_params
sem_params_of_arch_extra
sem_type
seq_extra
seq
shift_kind
slh_lowering
slh_ops
sopn
Specif
ssralg
ssrbool
ssreflect
ssrfun0
ssrfun
ssrint
ssrnat
ssrnum
stack_alloc
stack_zeroization
stack_zero_strategy
String0
strings
Sumbool
syscall
syscall_sem
tagged
tunneling
tuple
type
unionfind
unrolling
utils0
values
var0
varmap
waes
warray_
word0
word
word_ssrZ
wsize
x86_decl
x86_extra
x86_instr_decl
x86_lowering
x86
x86_params
x86_stack_zeroization
xseq
Zpower))
